--- a/public/products_display.html
+++ b/public/products_display.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lovelly's Products</title>
+    <title>Lovelly's Products ❀</title>
 
     <!--icon on tab-->
     <link rel="apple-touch-icon" sizes="180x180" href="./favicon_io/apple-touch-icon.png">
@@ -71,7 +71,7 @@
             <main><div class="main"></div></main>
             <br>
             <br>
-            <input type="submit" value="Purchase" class="purchase-btn">
+            <input type="submit" value="Purchase" id="purchase_button" class="purchase-btn">
             <br>
             <br>
         </form>
