--- a/public/register.html
+++ b/public/register.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Register Account - Lovelly</title>
+    <title>Register Account - Lovelly ❀</title>
     
     <!--icon on tab-->
     <link rel="apple-touch-icon" sizes="180x180" href="./favicon_io/apple-touch-icon.png">
@@ -47,9 +47,7 @@
 
                 <!--register button-->
                 <input type="submit" class="button" name="register_button" id="register_button" value=Register></input>
-               <br>
-               <br>
-               <br>
+                <br><br><br>
 
                 <!--login-->
                 <p>Already have an account?</p>
