--- a/public/invoice.html
+++ b/public/invoice.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Thanks for shopping - Lovelly!</title>
+    <title>Thanks for shopping - Lovelly ❀</title>
     
     <!--icon on tab-->
     <link rel="apple-touch-icon" sizes="180x180" href="./favicon_io/apple-touch-icon.png">
