--- a/public/invoice.html
+++ b/public/invoice.html
@@ -83,12 +83,10 @@
         </table>
     </div>
 
-        <!--logout button-->
-        <input type="button" class="button" value="Logout" id="logout-btn" onclick="window.location.href = 'products_display.html';">
+        <!--complete purchase button-->
+        <input type="button" class="button" value="Complete Purchase" id="complete-btn" onclick="window.location.href = 'products_display.html';">
 
-    <br>
-    <br>
-    <br>
+    <br><br><br>
 </body>
 
     <!--JavaScript file for invoice-->
