--- a/public/login.html
+++ b/public/login.html
@@ -36,7 +36,7 @@
         <h1>Lovelly ❀ </h1>
     </div>   
 
-    <!-----------------login form---------------->
+    <!--------------------login form-------------------->
     <form name="login" action="/login" method=POST>
         <br>
         <br>
